--- a/.gitignore
+++ b/.gitignore
@@ -27,6 +27,7 @@ static/icon-120.png
 static/icon-128.png
 static/icon-150.png
 static/icon-152.png
+static/icon-144.png
 static/icon-16.png
 static/icon-167.png
 static/icon-168.png
